--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
     <footer class="reveal">
       <div>Заботливый план на 12 недель. Можно распечатать, встроить в LMS или дополнить ежедневными мини-квестами.</div>
-      <div style="margin-top:6px">По желанию добавлю аудио-подсказки, таймеры и личный кабинет прогресса.</div>
+      <div style="margin-top:6px">.</div>
     </footer>
   </div>
 
