--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <tr class="stagger-reveal" data-delay="500"><td>12</td><td>Заключение</td><td>Дальнейшие шаги и уход за голосом</td><td>Сравнение записей «до/после», план на месяц</td></tr>
         </tbody>
       </table>
-      <p class="meta" style="margin-top:10px">Оптимальный ритм — 10–15 минут ежедневно. По желанию — выходной на восстановление.</p>
+      <p class="meta" style="margin-top:10px">.</p>
     </section>
 
     <!-- Ресурсы и советы -->
