--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           <tr class="stagger-reveal" data-delay="500"><td>12</td><td>Заключение</td><td>Дальнейшие шаги и уход за голосом</td><td>Сравнение записей «до/после», план на месяц</td></tr>
         </tbody>
       </table>
-      <p class="meta" style="margin-top:10px">.</p>
+      <p class="meta" style="margin-top:10px">Оптимальный ритм — 10–15 минут ежедневно. По желанию — выходной на восстановление.</p>
     </section>
 
     <!-- Ресурсы и советы -->
@@ -446,7 +446,7 @@
 
     <footer class="reveal">
       <div>Заботливый план на 12 недель. Можно распечатать, встроить в LMS или дополнить ежедневными мини-квестами.</div>
-      <div style="margin-top:6px">По желанию добавлю аудио-подсказки, таймеры и личный кабинет прогресса.</div>
+      <div style="margin-top:6px"></div>
     </footer>
   </div>
 
